--- a/assets/pages/forgetpassword.html
+++ b/assets/pages/forgetpassword.html
@@ -23,7 +23,7 @@
           <div class="row justify-content-center align-items-center min-vh-100">
             <div class="col-12 col-md-10 col-lg-10 position-relative">
               <img
-                src="assets/chhorng/img/Sirent.png"
+                src="../image/chhorng/Sirent.png"
                 class="position-absolute"
                 alt=""
                 style="
@@ -41,7 +41,7 @@
                     class="col-12 col-md-5 mb-4 mb-md-0 text-center d-none d-md-block"
                   >
                     <img
-                      src="assets/chhorng/img/Forgot password.svg"
+                      src="../image/chhorng/Forgot password.svg"
                       alt="Forgot Password"
                       class="img-fluid"
                     />
