--- a/assets/pages/newpassword.html
+++ b/assets/pages/newpassword.html
@@ -27,7 +27,7 @@
                   <!-- Left Image -->
                   <div class="col-12 col-md-5 mb-4 mb-md-0 text-center">
                     <img
-                      src="assets/chhorng/img/Reset password-amico.svg"
+                      src="../image/chhorng/Reset password-amico.svg"
                       alt="Reset Password"
                       class="img-fluid"
                     />
