--- a/assets/pages/user_pin.html
+++ b/assets/pages/user_pin.html
@@ -27,7 +27,7 @@
                   <!-- Left Image -->
                   <div class="col-12 col-md-5 mb-4 mb-md-0 text-center">
                     <img
-                      src="assets/chhorng/img/Pin.svg"
+                      src="../image/chhorng/Pin.svg"
                       alt="Pin Verification"
                       class="img-fluid"
                     />
