--- a/assets/pages/donate.html
+++ b/assets/pages/donate.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../css/theme.css" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="assets/Kropum/donate.css" />
+    <link rel="stylesheet" href="../css/donate.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
